# DSP391m

./: .env.example  .gitignore  QUICK_START_STT_SLM.md  README.md  main.py  pyproject.toml  requirements.txt
docs/: STT_SLM_FEATURE.md
exams/: co_so_du_lieu.txt  lap_trinh_python.txt  mang_may_tinh.txt  toan_cao_cap.txt
frontend/: app.py
scripts/: convert_phowhisper.py  demo.py  demo_stt_slm.py  download_models.py  setup.sh  setup_cuda.sh  test_api.py  test_embedding_only.py  test_slm_only.py  test_websocket.py
src/: __init__.py
src/api/: main.py
src/api/routes/: enrollment.py  exam.py  health.py
src/api/websocket/: __init__.py  audio_handler.py
src/core/: __init__.py  config.py  models.py  session.py
src/processing/: __init__.py  buffer.py  decision_engine.py  embedding.py  overlap_detector.py  pipeline.py  slm.py  speaker_verification.py  stt.py  vad.py
tests/: conftest.py  test_api.py  test_buffer.py  test_integration.py  test_stt.py  test_vad.py
